chore: create promtail rule and httproute

--- a/blueprints/headlamp/rule.yml
+++ b/blueprints/headlamp/rule.yml
@@ -20,7 +20,7 @@ spec:
       - PATCH
     url: http<s?>://headlamp.developer-friendly.blog<.*>
   mutators:
-    - handler: noop
+    - handler: header
   upstream:
     preserveHost: true
     url: http://headlamp.flux-system:80
