--- a/blueprints/promtail/helm-values.yml
+++ b/blueprints/promtail/helm-values.yml
@@ -63,7 +63,7 @@ deployment:
     type: RollingUpdate
 
 service:
-  enabled: false
+  enabled: true
   # -- Labels for the service
   labels: {}
   # -- Annotations for the service
@@ -279,7 +279,7 @@ enableServiceLinks: true
 # ServiceMonitor configuration
 serviceMonitor:
   # -- If enabled, ServiceMonitor resources for Prometheus Operator are created
-  enabled: false
+  enabled: true
   # -- Alternative namespace for ServiceMonitor resources
   namespace: null
   # -- Namespace selector for ServiceMonitor resources
