--- a/blueprints/kratos-admin-ui/rule.yml
+++ b/blueprints/kratos-admin-ui/rule.yml
@@ -20,7 +20,7 @@ spec:
       - PATCH
     url: http<s?>://kratos.developer-friendly.blog</?.*>
   mutators:
-    - handler: noop
+    - handler: header
   upstream:
     preserveHost: true
     url: http://kratos-admin-ui.auth:80
