--- a/blueprints/promtail/kustomization.yml
+++ b/blueprints/promtail/kustomization.yml
@@ -7,6 +7,8 @@ configMapGenerator:
     name: promtail
 
 resources:
+  - rule.yml
+  - httproute.yml
   - helmrelease.yml
 
 namespace: flux-system
