--- a/kubernetes/newsletter-server/auth/protected-httproutes/vmagent.yml
+++ b/kubernetes/newsletter-server/auth/protected-httproutes/vmagent.yml
@@ -53,7 +53,7 @@ items:
           - PATCH
         url: http<s?>://vmagent.developer-friendly.blog<.*>
       mutators:
-        - handler: noop
+        - handler: header
       upstream:
         preserveHost: true
         url: http://vmagent-victoria-metrics-k8s-stack.monitoring:8429
