--- a/blueprints/promtail/rule.yml
+++ b/blueprints/promtail/rule.yml
@@ -23,4 +23,4 @@ spec:
     - handler: noop
   upstream:
     preserveHost: true
-    url: http://promtail.flux-system:80
+    url: http://promtail-metrics.monitoring:3101
