chore: mount journal run directory

--- a/blueprints/promtail/helm-values.yml
+++ b/blueprints/promtail/helm-values.yml
@@ -247,11 +247,18 @@ extraVolumes:
     hostPath:
       path: /var/log/journal
       type: Directory
+  - name: journal-run
+    hostPath:
+      path: /run/log/journal
+      type: Directory
 
 # Extra volume mounts together. Corresponds to `extraVolumes`.
 extraVolumeMounts:
   - name: journal
     mountPath: /var/log/journal
+    readOnly: true
+  - name: journal-run
+    mountPath: /run/log/journal
     readOnly: true
 
 # Extra args for the Promtail container.
