chore: revert to old journal scraping

--- a/blueprints/promtail/helm-values.yml
+++ b/blueprints/promtail/helm-values.yml
@@ -519,23 +519,25 @@ config:
     extraScrapeConfigs: |
       - job_name: systemd-journal
         journal:
-          json: true
-          max_age: 7h
+          path: /var/log/journal
         relabel_configs:
-          - source_labels: ["__journal__hostname"]
-            target_label: host
           - source_labels: ["__journal__systemd_unit"]
-            target_label: systemd_unit
-            regex: "(.+)"
-          - source_labels: ["__journal__systemd_user_unit"]
-            target_label: systemd_user_unit
-            regex: "(.+)"
+            target_label: unit
+          - source_labels: ["__journal__hostname"]
+            target_label: hostname
+          - source_labels: ["__journal__boot_id"]
+            target_label: boot_id
+          - source_labels: ["__journal__machine_id"]
+            target_label: machine_id
+          - source_labels: ["__journal__priority"]
+            target_label: priority
+          - source_labels: ["__journal__syslog_identifier"]
+            target_label: syslog_identifier
           - source_labels: ["__journal__transport"]
             target_label: transport
-            regex: "(.+)"
-          - source_labels: ["__journal_priority_keyword"]
-            target_label: severity
-            regex: "(.+)"
+          - replacement: unit="$1"
+            source_labels: ["unit"]
+            target_label: _stream
 
     # -- You can put here any additional relabel_configs to "kubernetes-pods" job
     extraRelabelConfigs: []
