--- a/blueprints/listmonk-statics/httproute.yml
+++ b/blueprints/listmonk-statics/httproute.yml
@@ -57,3 +57,6 @@ spec:
         - path:
             type: Exact
             value: /favicon.ico
+        - path:
+            type: Exact
+            value: /robots.txt
