chore: use the GHCR image

--- a/blueprints/listmonk-statics/configs.env
+++ b/blueprints/listmonk-statics/configs.env
@@ -1,4 +1,9 @@
 FAVICON_URL=https://developer-friendly.blog/assets/favicon.ico
 LOGO_URL=https://developer-friendly.blog/assets/logo-256x256.webp
+SERVER_COMPRESSION_LEVEL=fastest
 SERVER_CONFIG_FILE=/etc/config.toml
-SERVER_ROOT=/var/public
+SERVER_FALLBACK_PAGE=index.html
+SERVER_HEALTH=true
+SERVER_LOG_REMOTE_ADDRESS=true
+SERVER_PORT=8000
+SERVER_ROOT=/public
