--- a/blueprints/listmonk-statics/deployment.yml
+++ b/blueprints/listmonk-statics/deployment.yml
@@ -1,3 +1,4 @@
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -10,7 +11,7 @@ spec:
         - envFrom:
             - configMapRef:
                 name: listmonk-statics
-          image: joseluisq/static-web-server
+          image: ghcr.io/static-web-server/static-web-server
           livenessProbe:
             httpGet:
               path: /health
@@ -29,27 +30,26 @@ spec:
             periodSeconds: 10
           resources: {}
           securityContext:
+            allowPrivilegeEscalation: false
             capabilities:
-              add:
-                - NET_BIND_SERVICE
               drop:
                 - ALL
             readOnlyRootFilesystem: true
+            runAsGroup: 65534
             runAsNonRoot: true
-            runAsUser: 1000
+            runAsUser: 65534
           volumeMounts:
-            - mountPath: /var/public
+            - mountPath: /public
               name: public-volume
               readOnly: true
             - mountPath: /etc/config.toml
               name: config-volume
               readOnly: true
               subPath: config.toml
-            - mountPath: /var/public/robots.txt
+            - mountPath: /public/robots.txt
               name: static-files
               readOnly: true
               subPath: robots.txt
-          workingDir: /var/public
       initContainers:
         - args:
             - |
@@ -65,16 +65,25 @@ spec:
           image: curlimages/curl
           name: init
           securityContext:
+            allowPrivilegeEscalation: false
             capabilities:
               drop:
                 - ALL
             readOnlyRootFilesystem: true
+            runAsGroup: 65534
             runAsNonRoot: true
-            runAsUser: 1000
+            runAsUser: 65534
           volumeMounts:
-            - mountPath: /var/public
+            - mountPath: /public
               name: public-volume
-          workingDir: /var/public
+          workingDir: /public
+      securityContext:
+        fsGroup: 65534
+        fsGroupChangePolicy: Always
+        seccompProfile:
+          type: RuntimeDefault
+        supplementalGroups: []
+        sysctls: []
       volumes:
         - emptyDir: {}
           name: public-volume
@@ -82,7 +91,7 @@ spec:
             name: listmonk-statics-config
           name: config-volume
         - configMap:
-            name: listmonk-statics-files
             defaultMode: 0444
+            name: listmonk-statics-files
             optional: false
           name: static-files
