--- a/blueprints/kratos/ciliumnetworkpolicy.yml
+++ b/blueprints/kratos/ciliumnetworkpolicy.yml
@@ -1,9 +1,8 @@
 apiVersion: cilium.io/v2
 kind: CiliumNetworkPolicy
 metadata:
-  name: capacitor
+  name: kratos
 spec:
-  description: Allow all internet traffic
   endpointSelector:
     matchLabels:
       k8s:app.kubernetes.io/component: kratos
