--- a/blueprints/echo-server/httproute.yml
+++ b/blueprints/echo-server/httproute.yml
@@ -17,10 +17,25 @@ spec:
           name: oathkeeper-proxy
           port: 80
       filters:
+        - requestHeaderModifier:
+            set:
+              - name: x-forwarded-proto
+                value: https
+          type: RequestHeaderModifier
+        - requestHeaderModifier:
+            set:
+              - name: x-forwarded-host
+                value: echo.developer-friendly.blog
+          type: RequestHeaderModifier
         - responseHeaderModifier:
             set:
               - name: Strict-Transport-Security
                 value: max-age=31536000; includeSubDomains; preload
+          type: ResponseHeaderModifier
+        - responseHeaderModifier:
+            add:
+              - name: set-cookie
+                value: SameSite=None; Secure
           type: ResponseHeaderModifier
       matches:
         - path:
