chore: expose meilisearch port

--- a/blueprints/hoarder/service.yml
+++ b/blueprints/hoarder/service.yml
@@ -8,3 +8,7 @@ spec:
       protocol: TCP
       targetPort: http
       name: http
+    - port: 7700
+      protocol: TCP
+      targetPort: meilisearch
+      name: meilisearch
