--- a/blueprints/hoarder/ciliumnetworkpolicy.yml
+++ b/blueprints/hoarder/ciliumnetworkpolicy.yml
@@ -12,5 +12,7 @@ spec:
         - ports:
             - port: "3000"
               protocol: TCP
+            - port: "7700"
+              protocol: TCP
           rules:
             http: [{}]
