--- a/blueprints/hoarder/configs.env
+++ b/blueprints/hoarder/configs.env
@@ -4,6 +4,8 @@ DISABLE_PASSWORD_AUTH=true
 DISABLE_SIGNUPS=false
 MAX_ASSET_SIZE_MB=128
 MEILI_ADDR=http://localhost:7700
+MEILI_ENV=production
+MEILI_LOG_LEVEL=info
 MEILI_MASTER_KEY=
 NEXTAUTH_SECRET=
 NEXTAUTH_URL=https://hoarder.developer-friendly.blog
