chore: expose tetragon behind authenticated proxy

--- a/blueprints/oathkeeper/referencegrant.yml
+++ b/blueprints/oathkeeper/referencegrant.yml
@@ -16,6 +16,9 @@ spec:
     - group: gateway.networking.k8s.io
       kind: HTTPRoute
       namespace: flux-system
+    - group: gateway.networking.k8s.io
+      kind: HTTPRoute
+      namespace: kube-system
   to:
     - group: ""
       kind: Service
