chore: open meilisearch to cluster

--- a/blueprints/hoarder/ciliumnetworkpolicy.yml
+++ b/blueprints/hoarder/ciliumnetworkpolicy.yml
@@ -12,6 +12,12 @@ spec:
         - ports:
             - port: "3000"
               protocol: TCP
+          rules:
+            http: [{}]
+    - fromEntities:
+        - cluster
+      toPorts:
+        - ports:
             - port: "7700"
               protocol: TCP
           rules:
