chore: create meilisearch scrape job for vmagent

--- a/blueprints/hoarder/kustomization.yml
+++ b/blueprints/hoarder/kustomization.yml
@@ -10,6 +10,7 @@ resources:
   - service.yml
   - serviceaccount.yml
   - statefulset.yml
+  - vmservicescrape.yml
 
 images:
   - name: ghcr.io/hoarder-app/hoarder
