fix: create json file for haproxy dashboard

--- a/blueprints/hoarder/vmservicescrape.yml
+++ b/blueprints/hoarder/vmservicescrape.yml
@@ -2,7 +2,7 @@
 apiVersion: operator.victoriametrics.com/v1beta1
 kind: VMServiceScrape
 metadata:
-  name: hoarder
+  name: meilisearch
 spec:
   endpoints:
     - bearerTokenSecret:
