--- a/kubernetes/newsletter-server/monitoring/kustomization.yml
+++ b/kubernetes/newsletter-server/monitoring/kustomization.yml
@@ -1,3 +1,11 @@
+configMapGenerator:
+  - name: haproxy-grafana-dashboard
+    files:
+      - haproxy-dashboard.json=grafana-dashboard-haproxy.json
+    options:
+      labels:
+        grafana_dashboard: "1"
+
 resources:
   - https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/refs/tags/v0.79.2/example/prometheus-operator-crd-full/monitoring.coreos.com_alertmanagerconfigs.yaml
   - https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/refs/tags/v0.79.2/example/prometheus-operator-crd-full/monitoring.coreos.com_alertmanagers.yaml
