chore: create flux-system smon

--- a/kubernetes/newsletter-server/monitoring/kustomization.yml
+++ b/kubernetes/newsletter-server/monitoring/kustomization.yml
@@ -20,6 +20,7 @@ resources:
 
   - kube-prometheus-dashboards.yml
   - trivy-operator-dashboard.yml
-  - haproxy.yml
+  - vmservicescrape-haproxy.yml
+  - vmservicescrape-flux-system.yml
 
 namespace: monitoring
