--- a/kubernetes/newsletter-server/monitoring/kustomization.yml
+++ b/kubernetes/newsletter-server/monitoring/kustomization.yml
@@ -5,6 +5,12 @@ configMapGenerator:
     options:
       labels:
         grafana_dashboard: "1"
+  - name: trivy-operator-grafana-dashboard
+    files:
+      - trivy-operator-dashboard.json=grafana-dashboard-trivy-operator.json
+    options:
+      labels:
+        grafana_dashboard: "1"
 
 resources:
   - https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/refs/tags/v0.79.2/example/prometheus-operator-crd-full/monitoring.coreos.com_alertmanagerconfigs.yaml
@@ -19,7 +25,6 @@ resources:
   - https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/refs/tags/v0.79.2/example/prometheus-operator-crd-full/monitoring.coreos.com_thanosrulers.yaml
 
   - kube-prometheus-dashboards.yml
-  - trivy-operator-dashboard.yml
   - vmservicescrape-haproxy.yml
   - vmservicescrape-flux-system.yml
 
