chore: create the missing flux services

--- a/kubernetes/newsletter-server/misc/vmservicescrape-flux-system.yml
+++ b/kubernetes/newsletter-server/misc/vmservicescrape-flux-system.yml
@@ -1,4 +1,68 @@
 ---
+apiVersion: v1
+kind: Service
+metadata:
+  name: source-controller-metrics
+  namespace: flux-system
+  labels:
+    app: source-controller
+spec:
+  ports:
+    - name: http-prom
+      port: 8080
+      targetPort: http-prom
+  selector:
+    app: source-controller
+  type: ClusterIP
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: kustomize-controller-metrics
+  namespace: flux-system
+  labels:
+    app: kustomize-controller
+spec:
+  ports:
+    - name: http-prom
+      port: 8080
+      targetPort: http-prom
+  selector:
+    app: kustomize-controller
+  type: ClusterIP
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: helm-controller-metrics
+  namespace: flux-system
+  labels:
+    app: helm-controller
+spec:
+  ports:
+    - name: http-prom
+      port: 8080
+      targetPort: http-prom
+  selector:
+    app: helm-controller
+  type: ClusterIP
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: notification-controller-metrics
+  namespace: flux-system
+  labels:
+    app: notification-controller
+spec:
+  ports:
+    - name: http-prom
+      port: 8080
+      targetPort: http-prom
+  selector:
+    app: notification-controller
+  type: ClusterIP
+---
 apiVersion: operator.victoriametrics.com/v1beta1
 kind: VMServiceScrape
 metadata:
