--- a/blueprints/cilium/helm-values.yml
+++ b/blueprints/cilium/helm-values.yml
@@ -3201,7 +3201,7 @@ clustermesh:
         #                 certificates not provided by the user at installation
         #                 time.
         # - certmanager:  This method use cert-manager to generate & rotate certificates.
-        method: helm
+        method: cronJob
         # -- Generated certificates validity duration in days.
         certValidityDuration: 1095
         # -- Schedule for certificates regeneration (regardless of their expiration date).
