feat: deploy aqua/tracee v0.x

--- a/blueprints/tetragon/kustomization.yml
+++ b/blueprints/tetragon/kustomization.yml
@@ -16,5 +16,6 @@ resources:
   - https://raw.githubusercontent.com/cilium/tetragon/refs/tags/v1.3.0/examples/tracingpolicy/host-changes/monitor-kernel-modules.yaml
   - https://raw.githubusercontent.com/cilium/tetragon/refs/tags/v1.3.0/examples/tracingpolicy/process-credentials/process.credentials.changes.at.syscalls.yaml
   - https://raw.githubusercontent.com/cilium/tetragon/refs/tags/v1.3.0/examples/tracingpolicy/process-credentials/creds-capability-usage.yaml
+  - tracingpolicy.yml
 
 namespace: flux-system
