--- a/blueprints/grafana-instance/datasource.yml
+++ b/blueprints/grafana-instance/datasource.yml
@@ -52,3 +52,33 @@ spec:
     matchLabels:
       dashboards: "grafana"
   resyncPeriod: "10m"
+---
+apiVersion: grafana.integreatly.org/v1beta1
+kind: GrafanaDatasource
+metadata:
+  name: victorialogs
+spec:
+  allowCrossNamespaceImport: true
+  datasource:
+    access: proxy
+    basicAuth: false
+    database: ""
+    editable: false
+    isDefault: true
+    jsonData:
+      derivedFields:
+        - datasourceUid: Loki
+          matcherRegex: ".*"
+          name: TraceID
+          url: "http://monitoring-victoria-logs-single-server:9428"
+    name: VictoriaLogs
+    orgId: 1
+    secureJsonData: {}
+    type: loki
+    uid: victorialogs
+    url: http://monitoring-victoria-logs-single-server:9428
+    user: ""
+  instanceSelector:
+    matchLabels:
+      dashboards: "grafana"
+  resyncPeriod: "10m"
