--- a/blueprints/victoria-metrics-k8s-stack/helm-values.yml
+++ b/blueprints/victoria-metrics-k8s-stack/helm-values.yml
@@ -273,14 +273,7 @@ externalVM:
     #   name: dbaas-read-access-token
     #   key: bearerToken
   write:
-    basicAuth:
-      password:
-        key: GRAFANA_CLOUD_PASSWORD
-        name: grafana-cloud
-      username:
-        key: GRAFANA_CLOUD_USERNAME
-        name: grafana-cloud
-    url: https://prometheus-prod-24-prod-eu-west-2.grafana.net/api/prom/push
+    url: ""
     # bearerTokenSecret:
     #   name: dbaas-read-access-token
     #   key: bearerToken
@@ -1292,26 +1285,6 @@ prometheus-operator-crds:
 
 # -- Add extra objects dynamically to this chart
 extraObjects:
-  - apiVersion: external-secrets.io/v1beta1
-    kind: ExternalSecret
-    metadata:
-      name: grafana-cloud
-    spec:
-      data:
-        - remoteRef:
-            key: /grafana_cloud/remote_write/username
-          secretKey: GRAFANA_CLOUD_USERNAME
-        - remoteRef:
-            key: /grafana_cloud/remote_write/password
-          secretKey: GRAFANA_CLOUD_PASSWORD
-      refreshInterval: 24h
-      secretStoreRef:
-        kind: ClusterSecretStore
-        name: aws-parameter-store
-      target:
-        creationPolicy: Owner
-        deletionPolicy: Delete
-        immutable: false
   - apiVersion: external-secrets.io/v1beta1
     kind: ExternalSecret
     metadata:
