--- a/blueprints/ente-server/externalsecret-envs.yml
+++ b/blueprints/ente-server/externalsecret-envs.yml
@@ -2,7 +2,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: ente-server
+  name: ente-server-envs
 spec:
   data:
     - remoteRef:
@@ -14,18 +14,6 @@ spec:
     - remoteRef:
         key: /ente/db/password
       secretKey: ENTE_DB_PASSWORD
-    - remoteRef:
-        key: /ente/s3/b2-eu-cen/key
-      secretKey: ENTE_S3_B2_EU_CEN_KEY
-    - remoteRef:
-        key: /ente/s3/b2-eu-cen/secret
-      secretKey: ENTE_S3_B2_EU_CEN_SECRET
-    - remoteRef:
-        key: /ente/s3/b2-eu-cen/endpoint
-      secretKey: ENTE_S3_B2_EU_CEN_ENDPOINT
-    - remoteRef:
-        key: /ente/s3/b2-eu-cen/bucket
-      secretKey: ENTE_S3_B2_EU_CEN_BUCKET
     - remoteRef:
         key: /ente/key/encryption
       secretKey: ENTE_KEY_ENCRYPTION
